--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "homepage": "https://yatsyshyn013.github.io/goit-react-hw-04-phonebook/",
   "dependencies": {
+    "@emotion/styled": "^11.10.8",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "react-toastify": "^9.1.2",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
